<resources>
    <string name="app_name">حسابداری شخصی</string>
    <string name="action_settings">Settings</string>
    <string name="cost">مبلغ</string>
    <string name="whole_cost">مبلغ کل</string>
    <string name="desc">توضیحات</string>
    <string name="date">تاریخ</string>
    <string name="save">ذخیره</string>
    <string name="show_checks">نمایش چک های ثبت شده</string>
    <string name="show_loans">نمایش وام های ثبت شده</string>
    <string name="show_incomes">نمایش درآمد های ثبت شده تا کنون</string>
    <string name="show_cost">نمایش هزینه های ثبت شده تا کنون</string>
    <string name="check_report">گزارش چک ها</string>
    <string name="loan_report">گزارش وام ها</string>
    <string name="income_report">گزارش درآمد ها</string>
    <string name="cost_report">گزاش هزینه ها</string>
    <string name="profile">حساب کاربری</string>
    <string name="name">نام کاربری</string>
    <string name="about_us">درباره ما</string>
    <string name="about_us_desc">برنامه حسابداری شخصی برای مدیریت هرچه بهتری هزینه های شماست. همچنین شما می توانید برای هر وظیفه ای که میخواهید اعلان در همان روز خاص دریافت کنید</string>
    <string name="exit">خروج و حذف داده</string>
    <string name="login">ورود</string>
    <string name="update_name_success">نام شما با موفقیت تغییر یافت</string>
    <string name="add_item_success">با موفقیت اضافه شد</string>
    <string name="reports">گزارش گیری</string>
    <string name="select_first_date">لطفا تاریخ شروع را انتخاب کنید</string>
    <string name="select_second_date">لطفا تاریخ پایان را انتخاب کنید</string>
    <string name="empty_list">لیست تراکنش های شما هم اکنون خالی است</string>
    <string name="delete">حذف</string>
    <string name="loans">وام ها</string>
    <string name="checks">چک ها</string>
    <string name="payments">اقساط</string>
    <string name="income">درآمد ها</string>
    <string name="entire">هزینه ها</string>
    <string name="show_payments">نمایش اقساط پرداختی تا به حال</string>
    <string name="payments_report">گزارش اقساط</string>
    <string name="end_date">تاریخ سررسید</string>
    <string name="created_date">تاریخ صدور</string>
    <string name="serial">شماره سریال چک</string>
    <string name="each_cost">مبلغ هر قسط</string>
    <string name="each_count">تعداد اقساط</string>
    <string name="related_loan">وام مرتبط</string>
</resources>